mariadb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: grupp2
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
