wordpress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: grupp2
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
