wordpress-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  namespace: grupp2
spec:
  to:
    kind: Service
    name: wordpress
  port:
    targetPort: 8080
  tls:
    termination: edge
